--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,13 +18,13 @@ on:
       run_single_test_mode:
         description: "Which type of single test to run"
         type: choice
-        default: "N/A"
+        default: 'N/A'
         options:
-          - "unit"
-          - "functional"
-          - "functional-xdc"
-          - "functional-ndc"
-          - "N/A"
+          - 'unit'
+          - 'functional'
+          - 'functional-xdc'
+          - 'functional-ndc'
+          - 'N/A'
       unit_test_directory:
         description: "[Unit Test Only] Directory to run unit tests in"
         type: string
@@ -84,7 +84,7 @@ jobs:
           shards=3
           timeout=30
           runs_on='["ubuntu-20.04"]'
-          if [[ "${{ inputs.run_single_functional_test }}" == "true" || "${{ inputs.run_single_unit_test }}" == "true" ]]; then
+          if [[ "${{ inputs.run_single_test_mode }}" != "N/A" ]]; then
             shards=1
             timeout=${{ inputs.timeout_minutes }}
             single_test_args="-run ${{ inputs.test_name }} -count ${{ inputs.n_runs }}"
@@ -113,7 +113,7 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == "N/A" }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
@@ -121,28 +121,28 @@ jobs:
           fetch-depth: 100
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == "N/A" }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - uses: arduino/setup-protoc@v3
-        if: ${{ inputs.run_single_test_mode == "N/A" }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' }}
 
       - run: GOOS=windows GOARCH=amd64 make clean-bins bins
-        if: ${{ inputs.run_single_test_mode == "N/A" }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' }}
 
       - run: GOOS=darwin GOARCH=arm64 make clean-bins bins
-        if: ${{ inputs.run_single_test_mode == "N/A" }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' }}
 
       - run: make clean-bins ci-build-misc
-        if: ${{ inputs.run_single_test_mode == "N/A" }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' }}
 
       - run: make build-tests
-        if: ${{ inputs.run_single_test_mode == "N/A" }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' }}
 
   unit-test:
-    if: ${{ inputs.run_single_test_mode == "N/A" || inputs.run_single_test_mode == "unit" }}
+    if: ${{ inputs.run_single_test_mode == 'N/A' || inputs.run_single_test_mode == 'unit' }}
     name: Unit test
     needs: [misc-checks, set-up-single-test]
     strategy:
@@ -155,7 +155,6 @@ jobs:
       SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
       UNIT_TEST_DIR: ${{ inputs.unit_test_directory }}
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
-      RUN_SINGLE_UNIT_TEST: ${{ inputs.run_single_unit_test }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -168,12 +167,12 @@ jobs:
           check-latest: true
 
       - name: Run unit tests
-        if: ${{ !cancelled() && !inputs.run_single_unit_test }}
+        if: ${{ !cancelled() && inputs.run_single_test_mode != 'unit' }}
         timeout-minutes: 15
         run: make unit-test-coverage
 
       - name: Run single unit test
-        if: ${{ !cancelled() && inputs.run_single_unit_test }}
+        if: ${{ !cancelled() && inputs.run_single_test_mode == 'unit' }}
         timeout-minutes: 15
         run: UNIT_TEST_DIRS=$UNIT_TEST_DIR make unit-test-coverage
 
@@ -182,7 +181,7 @@ jobs:
         run: make upload-test-results
 
   integration-test:
-    if: ${{ inputs.run_single_test_mode == "N/A" }}
+    if: ${{ inputs.run_single_test_mode == 'N/A' }}
     name: Integration test
     needs: misc-checks
     strategy:
@@ -227,7 +226,7 @@ jobs:
           docker compose -f ${{ env.DOCKER_COMPOSE_FILE }} down -v
 
   functional-test:
-    if: ${{ inputs.run_single_test_mode == "N/A" || inputs.run_single_test_mode == "functional" }}
+    if: ${{ inputs.run_single_test_mode == 'N/A' || inputs.run_single_test_mode == 'functional' }}
     name: Functional test
     needs: [misc-checks, set-up-single-test]
     strategy:
@@ -280,24 +279,24 @@ jobs:
       BUILDKITE_MESSAGE: "{\"job\": \"functional-test\", \"db\": \"${{ matrix.persistence_driver }}\"}"
     steps:
       - uses: ScribeMD/docker-cache@0.3.7
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           key: docker-${{ runner.os }}-${{ hashFiles(env.DOCKER_COMPOSE_FILE) }}
 
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -305,18 +304,18 @@ jobs:
           down-flags: -v
 
       - name: Run functional test
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
         run: make functional-test-coverage
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ !cancelled() && (inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
 
   functional-test-xdc:
-    if: ${{ inputs.run_single_test_mode == "N/A" || inputs.run_single_test_mode == "functional-xdc" }}
+    if: ${{ inputs.run_single_test_mode == 'N/A' || inputs.run_single_test_mode == 'functional-xdc' }}
     name: Functional test xdc
-    needs: misc-checks
+    needs: [misc-checks, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -352,19 +351,19 @@ jobs:
       BUILDKITE_MESSAGE: "{\"job\": \"functional-test-xdc\", \"db\": \"${{ matrix.persistence_driver }}\"}"
     steps:
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-xdc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-xdc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-xdc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -372,18 +371,18 @@ jobs:
           down-flags: -v
 
       - name: Run functional test xdc
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-xdc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: 30
         run: make functional-test-xdc-coverage
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-xdc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ !cancelled() && (inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-xdc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
 
   functional-test-ndc:
-    if: ${{ inputs.run_single_test_mode == "N/A" || inputs.run_single_test_mode == "functional-ndc" }}
+    if: ${{ inputs.run_single_test_mode == 'N/A' || inputs.run_single_test_mode == 'functional-ndc' }}
     name: Functional test ndc
-    needs: misc-checks
+    needs: [misc-checks, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -426,19 +425,19 @@ jobs:
       ES_VERSION: ${{ matrix.es_version }}
     steps:
       - uses: actions/checkout@v4
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-ndc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: ${{ env.COMMIT }}
 
       - uses: actions/setup-go@v5
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-ndc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
           go-version-file: 'go.mod'
           check-latest: true
 
       - name: Start containerized dependencies
-        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-ndc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ${{ env.DOCKER_COMPOSE_FILE }}
@@ -446,12 +445,12 @@ jobs:
           down-flags: -v
 
       - name: Run functional test ndc
-        if: ${{ inputs.run_single_test_mode == "N/A" || (inputs.run_single_test_mode == "functional-ndc" && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
+        if: ${{ inputs.run_single_test_mode == 'N/A' || (inputs.run_single_test_mode == 'functional-ndc' && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: 15
         run: make functional-test-ndc-coverage
 
   test-status:
-    if: ${{ inputs.run_single_test_mode == "N/A" }}
+    if: ${{ inputs.run_single_test_mode == 'N/A' }}
     name: Test Status
     needs:
       - unit-test
